src/objects/Account_Category__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Categories</relationshipLabel>
        <relationshipName>Account_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Classified_Main_Category__c</fullName>
        <label>Classified - Main Category</label>
        <picklist>
            <picklistValues>
                <fullName>Business &amp; Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &amp; Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homes &amp; Gardens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noticeboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal &amp; Notices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Overseas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel Overseas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel UK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Classified_Minor_Category__c</fullName>
        <label>Classified - Minor Category</label>
        <picklist>
            <controllingField>Classified_Main_Category__c</controllingField>
            <picklistValues>
                <fullName>Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessories &amp; Soft Furnishings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia &amp; New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balearics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bathrooms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bedrooms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackpool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bournemouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building &amp; Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Businesses For Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canaries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Hire &amp; Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claims Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clerical &amp; Secretarial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conservatories, Lofts &amp; Extensions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts &amp; Tenders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cornwall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cotswolds</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Classified_Sub_Category__c</fullName>
        <label>Classified - Sub Category</label>
        <picklist>
            <controllingField>Classified_Main_Category__c</controllingField>
            <picklistValues>
                <fullName>Airlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airport Parking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apprenticeships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auctions (General)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auctions (Motors)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auctions (Property)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B&amp;B/Guest Houses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bars/Clubs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bathing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Battlefields</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Births, Deaths and Marriages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business to Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camping &amp; Caravan Holidays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caravans &amp; Motorhomes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Hire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars wanted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charity Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christmas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cinemas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Trials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collectables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colleges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complementary Therapies &amp; Wellbeing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conferences</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Display_Main_Category__c</fullName>
        <label>Display - Main Category</label>
        <picklist>
            <picklistValues>
                <fullName>Business &amp; Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing &amp; Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmetics &amp; Personal Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment &amp; Leisure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Games &amp; Consoles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gardening &amp; Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Govt,social,political Organis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Appliances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Equipment &amp; Diy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Fmcg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leisure Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi Advertisers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Allocated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Equipment &amp; Stationery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmaceutical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecoms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tobacco &amp; Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel &amp; Transport</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Account Category</label>
    <nameField>
        <displayFormat>CAT-{0000}</displayFormat>
        <label>Account Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>